force-app/main/default/objects/Order_Item__c/fields/Customization__c.field-meta.xml
<CustomField>
    <fullName>Customization__c</fullName>
    <label>Customization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Cheese</fullName>
            </value>
            <value>
                <fullName>Extra Cheese</fullName>
            </value>
            <value>
                <fullName>No Onion</fullName>
            </value>
            <value>
                <fullName>ExtraSauce</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Vegan Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>