force-app/main/default/objects/Order_Item__c/fields/Restaurant_Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Restaurant Menu Item</label>
    <referenceTo>Restaurant_Menu_Item__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>