force-app/main/default/objects/Order_Item__c/fields/Spice_level__c.field-meta.xml
<CustomField>
    <fullName>Spice_level__c</fullName>
    <label>Spice level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mild,</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Spicy</fullName>
            </value>
            <value>
                <fullName>Extra Spicy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>